parsing en cours, signaux a revoir, built-in a completer

--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -6,9 +6,11 @@
 #    By: gsap <gsap@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/20 14:07:19 by gsap              #+#    #+#              #
-#    Updated: 2022/01/26 15:15:47 by gsap             ###   ########.fr        #
+#    Updated: 2022/01/31 17:45:02 by gsap             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
+
+# valgrind --leak-check=full --track-fds=yes --show-leak-kinds=all --suppressions=.ignore_readline -q ./minishell
 
 # Colors
 GREY = \e[90m
@@ -32,13 +34,14 @@ NAME = minishell
 
 CC = clang
 
-CFLAGS = -g -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror
 
 RM = rm -rf
 
 SRCS_PATH = srcs
 
-SRCS = $(addprefix $(SRCS_PATH)/,main.c echo.c pwd.c)
+SRCS = $(addprefix $(SRCS_PATH)/,main.c echo.c pwd.c handle_signal.c \
+	ft_split_minishell.c ft_list.c ft_parsing.c)
 
 OBJS_PATH = objs/
 
@@ -49,10 +52,10 @@ all: $(NAME)
 
 $(NAME): $(LIBFT) $(OBJS_PATH) $(OBJS) $(INC)/minishell.h
 	@ echo "$(BLUE)\n		*** Make $(NAME) ***\n$(END)"
-	@ $(CC) $(CFLAGS) -lreadline $(OBJS) -o $(NAME) $(LIBFT)
+	$(CC) $(CFLAGS) -lreadline $(OBJS) -o $(NAME) $(LIBFT)
 	@ echo "$(GREEN)\n		---$(NAME) created ---\n$(END)"
 
-$(LIBFT):
+$(LIBFT): libft/Makefile
 	@ echo "$(BLUE)\n		*** Make Libft ***\n$(END)"
 	@ make -C $(LIBFT_DIR)
 
@@ -60,7 +63,8 @@ $(OBJS_PATH):
 	@ mkdir -p $(OBJS_PATH)
 
 $(OBJS_PATH)%.o: $(SRCS_PATH)%.c $(INC)/$(NAME).h Makefile
-	@ $(CC) $(CFLAGS) -I $(INC) -c $< -o $@
+	$(CC) $(CFLAGS) -I $(INC) -c $< -o $@
+	@ echo "$(GREEN)[ OK ]$(END) $(CYAN)${<:.s=.o}$(END)"
 
 clean:
 	@ $(RM) $(OBJS_PATH)
