ajout amour Makefile

--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -6,7 +6,7 @@
 #    By: gsap <gsap@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/20 14:07:19 by gsap              #+#    #+#              #
-#    Updated: 2022/02/01 15:50:39 by gsap             ###   ########.fr        #
+#    Updated: 2022/02/02 12:01:29 by jgourlin         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -34,7 +34,7 @@ SRCS_PATH = srcs
 
 #	Files
 FILES = main.c echo.c pwd.c handle_signal.c ft_split_minishell.c ft_list.c \
-	ft_parsing.c ft_error.c
+	ft_parsing.c ft_error.c amour.c
 
 #	Compilation
 NAME = minishell
