--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -6,7 +6,7 @@
 #    By: gsap <gsap@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/20 14:07:19 by gsap              #+#    #+#              #
-#    Updated: 2022/02/02 15:22:25 by gsap             ###   ########.fr        #
+#    Updated: 2022/02/03 13:49:25 by gsap             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -33,8 +33,8 @@ LIBFT = $(LIBFT_DIR)/libft.a
 SRCS_PATH = srcs
 
 #	Files
-FILES = main.c echo.c pwd.c handle_signal.c ft_split_minishell.c ft_list.c \
-	ft_parsing.c ft_error.c ft_env_func.c ft_env.c
+FILES = main.c echo.c pwd.c handle_signal.c ft_split_minishell.c ft_list_cmd.c \
+	ft_parsing.c ft_error.c ft_env_func.c ft_env.c ft_unset.c
 
 #	Compilation
 NAME = minishell
