--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: jgourlin <jgourlin@student.42.fr>          +#+  +:+       +#+         #
+#    By: gsap <gsap@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/20 14:07:19 by gsap              #+#    #+#              #
-#    Updated: 2022/03/07 12:19:06 by jgourlin         ###   ########.fr        #
+#    Updated: 2022/03/08 17:14:24 by gsap             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -46,7 +46,7 @@ SRCS_PATH = srcs
 FILES = main.c ft_env_func.c handle_signal.c ft_parsing.c ft_split_minishell.c \
 	ft_line_func.c ft_limiteur.c ft_here_doc.c ft_expand.c ft_infile.c ft_outdir.c \
 	ft_del_redir.c \
-	echo.c pwd.c ft_env.c ft_unset.c ft_export.c cd.c ft_export_utils.c \
+	echo.c pwd.c env.c unset.c export.c cd.c ft_export_utils.c exit.c\
 	pipex_main.c pipex_child.c pipex_tools.c \
 	ft_error.c ft_tools.c
 
