--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -6,7 +6,7 @@
 #    By: gsap <gsap@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/20 14:07:19 by gsap              #+#    #+#              #
-#    Updated: 2022/03/08 17:14:24 by gsap             ###   ########.fr        #
+#    Updated: 2022/03/09 13:14:23 by gsap             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -48,7 +48,7 @@ FILES = main.c ft_env_func.c handle_signal.c ft_parsing.c ft_split_minishell.c \
 	ft_del_redir.c \
 	echo.c pwd.c env.c unset.c export.c cd.c ft_export_utils.c exit.c\
 	pipex_main.c pipex_child.c pipex_tools.c \
-	ft_error.c ft_tools.c
+	ft_error.c ft_tools.c ft_quotes.c
 
 #	Compilation
 NAME = minishell
