--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -6,7 +6,7 @@
 #    By: gsap <gsap@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/20 14:07:19 by gsap              #+#    #+#              #
-#    Updated: 2022/03/09 16:18:17 by gsap             ###   ########.fr        #
+#    Updated: 2022/03/14 09:26:39 by gsap             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -45,7 +45,7 @@ SRCS_PATH = srcs
 #	Files
 FILES = main.c ft_env_func.c handle_signal.c ft_parsing.c ft_split_minishell.c \
 	ft_line_func.c ft_limiteur.c ft_here_doc.c ft_expand.c ft_infile.c ft_outdir.c \
-	ft_del_redir.c \
+	ft_del_redir.c ft_check_pipe.c \
 	echo.c pwd.c env.c unset.c export.c cd.c ft_export_utils.c exit.c\
 	pipex_main.c pipex_child.c pipex_tools.c \
 	ft_error.c ft_tools.c ft_quotes.c
