--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: gsap <gsap@student.42.fr>                  +#+  +:+       +#+         #
+#    By: jgourlin <jgourlin@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/20 14:07:19 by gsap              #+#    #+#              #
-#    Updated: 2022/03/18 19:10:50 by gsap             ###   ########.fr        #
+#    Updated: 2022/03/20 17:49:59 by jgourlin         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -47,7 +47,7 @@ FILES = main.c ft_env_func.c handle_signal.c ft_parsing.c ft_split_minishell.c \
 	ft_line_func.c ft_limiteur.c ft_here_doc.c ft_expand.c ft_infile.c ft_outdir.c \
 	ft_del_redir.c ft_check_pipe.c ft_expand_utils.c ft_outdir_utils.c\
 	echo.c pwd.c env.c unset.c export.c cd.c cd_tools.c ft_export_utils.c exit.c\
-	pipex_main.c pipex_child.c pipex_tools.c \
+	pipex_main.c pipex_child.c pipex_tools.c pipex_child_tools.c\
 	ft_error.c ft_tools.c ft_quotes.c
 
 #	Compilation
